--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "build": "tsc && cross-env VITE_BASE=/github-blog vite build",
+    "preview": "cross-env VITE_BASE=/github-blog vite preview",
     "lint": "eslint src --ext .tsx,.ts",
-    "lint-fix": "eslint src --ext .tsx,.ts --fix",
-    "deploy": "yarn install && yarn build && firebase deploy --only hosting"
+    "lint-fix": "eslint src --ext .tsx,.ts --fix"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -35,11 +34,13 @@
     "zod": "^3.20.6"
   },
   "devDependencies": {
+    "@types/node": "^20.11.16",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "@vitejs/plugin-react": "^3.1.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.33.0",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-react": "^7.32.2",
